resolve spacing between logos

--- a/docs/src/components/section.module.scss
+++ b/docs/src/components/section.module.scss
@@ -189,8 +189,8 @@
 }
 
 .sectionOhs {
-  height: 560px;
-  width: 1368px;
+  height: 528px;
+  width: 1320px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -222,9 +222,9 @@ $gridSize: 18;
 }
 
 .sectionOh {
-  animation: sectionOhColorize 4s infinite;
-  color: transparent;
-  padding: 8px;
+  // animation: sectionOhColorize 4s infinite;
+  // color: transparent;
+  padding: 14px;
 
   $i: 0;
 
@@ -237,6 +237,10 @@ $gridSize: 18;
         animation-delay: $dist*200ms;
       }
     }
+  }
+
+  svg {
+    display: block;
   }
 }
 
